--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style.css">
   
   <title>Frontend Mentor | FAQ accordion</title>
 
@@ -15,31 +16,32 @@
   </style>
 </head>
 <body>
+  <div class="FAQ0">
+    <h1>FAQs</h1>
 
-  FAQs
+ <h3>What is Frontend Mentor, and how will it help me?</h3> 
 
-  What is Frontend Mentor, and how will it help me?
+  <p>Frontend Mentor offers realistic coding challenges to help developers improve their 
+    frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+    all levels and ideal for portfolio building.</p>
+    <hr>
+  <h3>Is Frontend Mentor free?</h3>
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+  <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+    option providing access to a range of projects suitable for all skill levels.</p>
+    <hr>
+  <h3>Can I use Frontend Mentor projects in my portfolio?</h3>
 
-  Is Frontend Mentor free?
-
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
+  <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+    way to showcase your skills to potential employers!</p>
+    <hr>
+  <h3>How can I get help if I'm stuck on a Frontend Mentor challenge?</h3>
   
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
+  <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+    channel where you can ask questions and seek support from other community members.</p>
 
-  
+  </div>
+  <br> <br> <br> <br> <br> <br> 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
